@@ -69,10 +69,10 @@ static struct cipher_table_entry
     { &_gcry_cipher_spec_serpent192, GCRY_CIPHER_SERPENT192 },
     { &_gcry_cipher_spec_serpent256, GCRY_CIPHER_SERPENT256 },
 #endif
-#ifdef USE_RFC2268
+#if USE_RFC2268
     { &_gcry_cipher_spec_rfc2268_40, GCRY_CIPHER_RFC2268_40 },
 #endif
-#ifdef USE_SEED
+#if USE_SEED
     { &_gcry_cipher_spec_seed,       GCRY_CIPHER_SEED },
 #endif
     { NULL                    }
